--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,9 @@
 plugins {
     id "java"
+    id 'org.jetbrains.kotlin.jvm' version '1.4.21' //Set the Kotlin version here
+    id 'maven'
+    id 'maven-publish'
+    id 'idea'
     id "edu.wpi.first.GradleRIO" version "2021.2.2"
 }
 
@@ -43,6 +47,8 @@ def includeDesktopSupport = true
 // Defining my dependencies. In this case, WPILib (+ friends), and vendor libraries.
 // Also defines JUnit 4.
 dependencies {
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    
     implementation wpi.deps.wpilib()
     nativeZip wpi.deps.wpilibJni(wpi.platforms.roborio)
     nativeDesktopZip wpi.deps.wpilibJni(wpi.platforms.desktop)
